# OptiSpark

./: .coverage  .env.example  .gitignore  LICENSE  README.md  advanced_poc_demo.py  databricks.yml  databricks_demo.py  err.txt  mock.py  mock2.py  pyproject.toml  render.yaml  requirements.txt  setup.py  test_failures.txt  test_output.txt  test_results.txt
.github/workflows/: ci.yml
server/: main.py  requirements.txt
src/optispark/: __init__.py  agent.py  benchmark.py  cli.py  listener.py  parser.py  plan_analyzer.py  reasoning.py  safety.py  validator.py
src/optispark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent.py  test_agent_ui.py  test_benchmark.py  test_cli.py  test_imports.py  test_listener.py  test_parser.py  test_plan_analyzer.py  test_reasoning.py  test_safety.py  test_server.py  test_validator.py
