[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optispark"
version = "0.2.0"
authors = [
  { name="Abhyudith M Bharadhwaj", email="abhyudith@gmail.com" },
]
description = "An autonomous copilot for PySpark optimization — diagnoses bottlenecks and generates safe, executable fixes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["pyspark", "spark", "optimization", "llm", "agent", "catalyst", "performance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dependencies = [
    "pyspark>=3.0.0",
    "zstandard>=0.22.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Radom12/OptiSpark"
"Bug Tracker" = "https://github.com/Radom12/OptiSpark/issues"
"Source" = "https://github.com/Radom12/OptiSpark"

[project.scripts]
optispark = "optispark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]